--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
 	"name": "trinity",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"author": "Jake Verbaten <raynos2@gmail.com>",
 	"main": "src/trinity",
+	"dependencies": {
+		"stak": "0.0.2",
+		"error": "0.0.1",
+		"after": "0.1.6",
+		"pd": "0.2.1"
+	},
 	"engines": {
 		"node": "0.5.x"
 	}
